--- a/.github/workflows/save-api-data.yml
+++ b/.github/workflows/save-api-data.yml
@@ -27,7 +27,7 @@ jobs:
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git add data/latest.json
+          git add data/
           git commit -m "Update data at $(date -u +"%Y-%m-%dT%H:%M:%SZ")" || echo "No changes"
           git push
         env:
