--- a/package.json
+++ b/package.json
@@ -3,5 +3,8 @@
   "version": "1.0.0",
   "type": "module",
   "main": "index.js",
-  "dependencies": {}
+  "dependencies": {},
+  "scripts": {
+    "start": "node index.js"
+  }
 }
